deployments/mysql/dev/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: mysql-dev
spec:
  serviceName: mysql
  replicas: 3 # 3 nodes for Group Replication
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          volumeMounts:
            - name: mysql-config-volume
              mountPath: /etc/mysql/group.conf.template
              subPath: group.conf.template
          ports:
            - containerPort: 3306
          lifecycle:
            postStart:
              exec:
                command:
                  - "/bin/sh"
                  - "-c"
                  - |
                    echo "Waiting for MySQL to start..."
                    until mysqladmin ping -uroot -p$MYSQL_ROOT_PASSWORD --silent; do
                    sleep 5
                    echo "MySQL is not ready yet, retrying..."
                    done         

                    echo "Configuring MySQL Group Replication..."
                    mysql -uroot -p$MYSQL_ROOT_PASSWORD -e "
                    SET SQL_LOG_BIN=0;
                    CREATE USER IF NOT EXISTS 'repl'@'%' IDENTIFIED WITH 'caching_sha2_password' BY '$MYSQL_REPL_PASSWORD';
                    GRANT REPLICATION SLAVE ON *.* TO 'repl'@'%';
                    CHANGE REPLICATION SOURCE TO SOURCE_USER='repl', SOURCE_PASSWORD='$MYSQL_REPL_PASSWORD', SOURCE_AUTO_POSITION=1;
                    SET GLOBAL group_replication_bootstrap_group=1;
                    START GROUP_REPLICATION;
                    SET GLOBAL group_replication_bootstrap_group=0;
                    "
                    wait
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
          volumes:
            - name: mysql-config-volume
              configMap:
              name: mysql-config
          readinessProbe:
          exec:
            command: ["mysqladmin", "ping", "-uroot", "-p$MYSQL_ROOT_PASSWORD"]
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 10

          livenessProbe:
          exec:
            command: ["mysqladmin", "ping", "-uroot", "-p$MYSQL_ROOT_PASSWORD"]
          initialDelaySeconds: 30
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 5

  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
