deployments/mysql/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: mysql-dev
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
