deployments/mysql/dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: mysql
  name: mysql
  namespace: mysql-dev
spec:
  port:
    targetPort: 3306
  to:
    kind: Service
    name: mysql
    weight: 100
